--- a/package.json
+++ b/package.json
@@ -1,33 +1,7 @@
 {
-    "name": "todo-api",
-    "version": "1.0.0",
-    "description": "Micro-service ToDo API",
-    "main": "src/index.js",
-    "scripts": {
-      "start": "node src/index.js",
-      "dev": "nodemon src/index.js",
-      "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "dependencies": {
-      "ajv": "^8.12.0",
-      "bullmq": "^4.0.0",
-      "compression": "^1.7.4",
-      "dotenv": "^16.0.3",
-      "express": "^4.18.2",
-      "express-jwt": "^8.4.1",
-      "express-rate-limit": "^6.7.0",
-      "knex": "^2.4.2",
-      "morgan": "^1.10.0",
-      "pm2": "^5.3.0",
-      "redis": "^4.6.6",
-      "sqlite3": "^5.1.6",
-      "winston": "^3.8.2",
-      "@opentelemetry/api": "^1.4.1",
-      "@opentelemetry/exporter-prometheus": "^0.39.1",
-      "@opentelemetry/sdk-node": "^0.39.1",
-      "@opentelemetry/auto-instrumentations-node": "^0.36.6"
-    },
-    "devDependencies": {
-      "nodemon": "^2.0.22"
-    }
+  "name": "todo-api",
+  "dependencies": {
+    "express": "^4.18.2",
+    "sqlite3": "^5.1.6"
   }
+}
