--- a/package.json
+++ b/package.json
@@ -2,6 +2,15 @@
   "name": "todo-api",
   "dependencies": {
     "express": "^4.18.2",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.6",
+    "pm2": "^5.3.0"
+  }
+}
+{
+  "dependencies": {
+    "express": "^4.18.2",
+    "sqlite3": "^5.1.6", 
+    "pm2": "^5.3.0",
+    "redis": "^4.6.6"
   }
 }
