--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "express": "^4.18.2",
     "sqlite3": "^5.1.6", 
     "pm2": "^5.3.0",
-    "redis": "^4.6.6"
+    "redis": "^4.6.6",
+    "prom-client": "^14.2.0"
   }
 }
